[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Tiago MARTINEZ <tiago.martinez@ingenico.com>"]
edition = "2018"

[dependencies]
hex = "0.4"
base64 = "0.12.3"
rand = "0.8.4"
lazy_static = "1.4.0"
aes = "0.7.5"
num = { version = "0.4" }
sha2 = "0.9.8"
hmac = "0.11.0"
glass_pumpkin = "1.2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
